--- a/index.qmd
+++ b/index.qmd
@@ -9,7 +9,7 @@ output:
 
 [National Computational Infrastructure (NCI)](https://nci.org.au/our-systems) is a services facility that provides high performance computing (HPC), cloud computing, and data services to Australian researchers.
 
-Our insitutional HPC 'Artemis' will be de-comissioned in August 2025. NCI has been chosen as the replacement computing platform. All staff and students with a valid University of Sydney unikey can access NCI computing time under the [NCI-Sydney Scheme](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/3448733944/NCI-Sydney+Scheme). 
+**Our insitutional HPC 'Artemis' will be de-comissioned on 29 August 2025**. NCI has been chosen as the replacement computing platform. All staff and students with a valid University of Sydney unikey can access NCI computing time under the [NCI-Sydney Scheme](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/3448733944/NCI-Sydney+Scheme). A [pre-recorded information session](https://youtu.be/DmfzO-YKeV8) summarising the Sydney Scheme and how to access NCI is available to view. 
 
 If HPC is not suitable for your workload, please consider NCI [cloud](https://opus.nci.org.au/display/Help/Nirin+Cloud+User+Guide) or [virtual research desktops](https://are.nci.org.au/). We are confident that your research computing will be well-supported by these platforms. 
 
