--- a/notebooks/05_data_transfer.qmd
+++ b/notebooks/05_data_transfer.qmd
@@ -10,7 +10,7 @@ from: markdown+emoji
  
 In this section, we will look at transferring data between the Research Data Store and Gadi.
 
-[Watch the pre-recorded session](https://youtu.be/ZBOycXymok4)
+[Watch the pre-recorded session](https://youtu.be/ZBOycXymok4?si=Ln03g69UjCcylF13&t=1856)
  
 The main challenges users may face adapting Artemis workflows to Gadi are:
  
