--- a/notebooks/12_walltime.qmd
+++ b/notebooks/12_walltime.qmd
@@ -11,6 +11,8 @@ from: markdown+emoji
 
 In this section, we will discuss ways of adapting your long walltime jobs from Artemis to NCI platforms. 
 
+[Watch the pre-recorded session](https://youtu.be/s1G8-TBRyTo)
+
 The main challenges users may face adapting Artemis workflows to Gadi are:
 
 
