--- a/index.qmd
+++ b/index.qmd
@@ -46,6 +46,12 @@ Live and self-directed training is also offered by SIH and NCI on HPC and data a
 
 * [SIH training calendar](https://www.sydney.edu.au/research/facilities/sydney-informatics-hub/workshops-and-training/training-calendar.html)
 * [NCI training calendar](https://opus.nci.org.au/display/Help/NCI+Training+and+Educational+Events)
+* A pre-recorded information session [summarising the Sydney Scheme and how to access NCI](https://youtu.be/DmfzO-YKeV8) 
+* A pre-recorded information session on [adapting Artemis job scripts to Gadi](https://www.youtube.com/watch?v=ZBOycXymok4)
+* A pre-recorded information session on [data transfer between RDS and Gadi](https://youtu.be/ZBOycXymok4?si=Ln03g69UjCcylF13&t=1856)
+* A pre-recorded information session on [working within the Gadi walltime limit](https://youtu.be/s1G8-TBRyTo)
+* A pre-recorded information session on [KSU estimation and compute resource benchmarking on Gadi](https://youtu.be/4ztdcnfIaP4)
+* A live session on [running parallel jobs on Gadi](https://uni-sydney.zoom.us/j/86462552203) - recording TBA
 
 For additional support, please contact the following people depending on your needs:
 
@@ -54,4 +60,4 @@ For additional support, please contact the following people depending on your ne
 | Service unit allocation for running jobs. Request for g/data storage. | SIH | [Make a request](https://nci.sydney.edu.au/) | [Sydney Documentation](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/3448733944/NCI-Sydney+Scheme) |
 | A techincal issue with NCI. An error in your running job. New software installation. | NCI Helpdesk | [Log an NCI ticket](https://nci.org.au/users/nci-helpdesk) | Provide your error, log file, jobid. Versions or links for installs. |
 | A bug in an [SIH pipeline](https://github.com/Sydney-Informatics-Hub) | SIH | Submit an issue on Github | Provide details e.g. [this issue](https://github.com/Sydney-Informatics-Hub/Germline-StructuralV-nf/issues/65) |
-| General research computing or bioinformatics advice | SIH| [Log an SIH ticket](https://www.sydney.edu.au/research/facilities/sydney-informatics-hub.html) | Provide relevant context, errors, tool names, scripts |
+| General research computing or data analysis advice | SIH| [Log an SIH ticket](https://www.sydney.edu.au/research/facilities/sydney-informatics-hub.html) | Provide relevant context, errors, tool names, scripts |
